fix: remove prereleases and update versions